tests/invalid/entry_missing_body.wio
fn Entry(args: string[]) -> i32;
